# ytranscript

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.ipynb_checkpoints/: main-checkpoint.py  pyproject-checkpoint.toml
app_demo/: app.py
app_demo/data/c3ai_youtube_index/: index.faiss
channel_recommendation/: app.py
channel_recommendation/data/: c3ai_job_offer.txt
notebooks/: 01rldii7b_Q.txt  api_testing.ipynb  c3ai_content.ipynb  fast_rag.ipynb  get_all_transcripts.ipynb  nlp.py  snowflakedevelopers_transcripts.jsonl  snowflakedevelopers_videos.json  summarize.ipynb  summarize_video.ipynb  utils.py  whisper.ipynb  yt_api.ipynb  yt_channel_list_videos.ipynb  yt_search.ipynb
notebooks/.ipynb_checkpoints/: whisper-checkpoint.ipynb
notebooks/data/: c3ai_videos.json  snowflake_flat.csv  snowflake_flat.json  snowflake_flatten_json.ipynb
notebooks/data/c3ai_youtube_index/: index.faiss  index.pkl
src/: app.py  utils.py
video_summary/: app.py  utils.py
