[project]
name = "audio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "dotenv>=0.9.9",
    "faiss-cpu>=1.13.2",
    "jupyter>=1.1.1",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.7",
    "notebook>=7.5.3",
    "streamlit>=1.19.0",
    "tiktoken>=0.12.0",
    "youtube-transcript-api>=1.2.4",
]
