[project]
name = "audio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair==5.5.0",
    "dotenv>=0.9.9",
    "faiss-cpu>=1.13.2",
    "google-api-python-client>=2.188.0",
    "jupyter>=1.1.1",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.9",
    "notebook>=7.5.3",
    "openai-whisper>=20250625",
    "pandas<3.0.0",
    "streamlit>=1.22.0",
    "youtube-transcript-api>=1.2.4",
    "yt-dlp>=2026.1.31",
]
