[project]
name = "ytranscript"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair==5.5.0",
    "dotenv>=0.9.9",
    "faiss-cpu>=1.13.2",
    "google-api-python-client>=2.188.0",
    "jupyter>=1.1.1",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.9",
    "notebook>=7.5.3",
    "openai-whisper>=20250625",
    "pandas<3.0.0",
    "streamlit>=1.22.0",
    "youtube-transcript-api>=1.2.4",
    "yt-dlp>=2026.1.31",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.15.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"
extend-exclude = [
    "notebooks",
    "README.md",
    "notebooks/*.ipynb",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
exclude = ["README.md"]

ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
